--- a/config.h.in
+++ b/config.h.in
@@ -1,5 +1,8 @@
 /* config.h.in.  Generated from configure.ac by autoheader.  */
 
+/* Signal to boost lib that it is being used without the rest of boost */
+#undef BOOST_REGEX_STANDALONE
+
 /* Define if built with 7ZIP support */
 #undef HAVE_7ZIP
 
@@ -25,25 +28,25 @@
 /* Define to 1 if you have the <inttypes.h> header file. */
 #undef HAVE_INTTYPES_H
 
-/* Define to 1 if you have `brotli' library (-lbrotlidec -lbrotlienc) */
+/* Use libbrotlidec compression library */
 #undef HAVE_LIBBROTLI
 
-/* Define to 1 if you have `bz2' library (-lbz2) */
+/* Use bzip2 compression library */
 #undef HAVE_LIBBZ2
 
 /* Define to 1 if you have `bzip3' library (-lbzip3) */
 #undef HAVE_LIBBZIP3
 
-/* Define to 1 if you have `lz4' library (-llz4) */
+/* Use liblz4 compression library */
 #undef HAVE_LIBLZ4
 
-/* Define to 1 if you have `lzma' library (-llzma) */
+/* Use liblzma compression library */
 #undef HAVE_LIBLZMA
 
-/* Define to 1 if you have `z' library (-lz) */
+/* Use libz compression library */
 #undef HAVE_LIBZ
 
-/* Define to 1 if you have `zstd' library (-lzstd) */
+/* Use libzstd compression library */
 #undef HAVE_LIBZSTD
 
 /* Define to 1 if you have a working `mmap' system call. */
@@ -55,11 +58,14 @@
 /* Define if O_NOATIME open flag is supported */
 #undef HAVE_O_NOATIME
 
-/* Define to 1 if you have `PCRE2' library (-lpcre2-8) */
+/* Use PCRE2 (Perl Compatible Regular Expression Library) */
 #undef HAVE_PCRE2
 
-/* Define to 1 if you have the <pthread.h> header file. */
-#undef HAVE_PTHREAD_H
+/* Define if you have POSIX threads libraries and header files. */
+#undef HAVE_PTHREAD
+
+/* Have PTHREAD_PRIO_INHERIT. */
+#undef HAVE_PTHREAD_PRIO_INHERIT
 
 /* Define to 1 if you have the `pthread_setaffinity_np' function. */
 #undef HAVE_PTHREAD_SETAFFINITY_NP
@@ -170,6 +176,10 @@
 
 /* Define to the version of this package. */
 #undef PACKAGE_VERSION
+
+/* Define to necessary symbol if this constant uses a non-standard name on
+   your system. */
+#undef PTHREAD_CREATE_JOINABLE
 
 /* Define to 1 if all of the C90 standard headers exist (not just the ones
    required in a freestanding environment). This macro is provided for
